--- a/Autoencoder/VariationalAutoencoderNoPValue.ipynb
+++ b/Autoencoder/VariationalAutoencoderNoPValue.ipynb
@@ -131,9 +131,12 @@
     "random.seed(seed)\n",
     "torch.manual_seed(seed)\n",
     "\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
     "N = \"Fast\"\n",
     "\n",
-    "path = \"D:/Research/Visual Field/Simulation/Data\"\n",
+    "path = \"drive/MyDrive/VisualField\"\n",
     "\n",
     "simulationData = pd.read_csv(f\"{path}/{N}P.csv\")\n",
     "\n",
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a4724a3c",
    "metadata": {
     "colab": {
@@ -216,7 +219,7 @@
     "\n",
     "batchsize = 64\n",
     "input_size = 52\n",
-    "TD = torch.randn(batchsize, input_size)\n",
+    "TD = torch.randn(batchsize, input_size).cuda()\n",
     "model = VFAutoencoder().cuda()\n",
     "output = model(TD.cuda())"
    ]
