--- a/Autoencoder/VariationalAutoencoderWithPValue.ipynb
+++ b/Autoencoder/VariationalAutoencoderWithPValue.ipynb
@@ -137,9 +137,12 @@
     "random.seed(seed)\n",
     "torch.manual_seed(seed)\n",
     "\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
     "N = \"Fast\"\n",
     "\n",
-    "path = \"D:/Research/Visual Field/Simulation/Data\"\n",
+    "path = \"drive/MyDrive/VisualField\"\n",
     "\n",
     "simulationData = pd.read_csv(f\"{path}/{N}P.csv\")\n",
     "\n",
