--- a/Autoencoder/MaskedAutoencoderWithPValue.ipynb
+++ b/Autoencoder/MaskedAutoencoderWithPValue.ipynb
@@ -146,9 +146,12 @@
     "random.seed(seed)\n",
     "torch.manual_seed(seed)\n",
     "\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
     "N = \"Fast\"\n",
     "\n",
-    "path = \"D:/Research/Visual Field/Simulation/Data\"\n",
+    "path = \"drive/MyDrive/VisualField\"\n",
     "\n",
     "simulationData = pd.read_csv(f\"{path}/{N}P.csv\")\n",
     "\n",
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a4724a3c",
    "metadata": {
     "colab": {
@@ -216,9 +219,9 @@
     "\n",
     "batchsize = 64\n",
     "input_size = 52\n",
-    "TD = torch.randn(batchsize, input_size)\n",
-    "Probability = torch.randn(batchsize, input_size)\n",
-    "model = VFAutoencoder()\n",
+    "TD = torch.randn(batchsize, input_size).cuda()\n",
+    "Probability = torch.randn(batchsize, input_size).cuda()\n",
+    "model = VFAutoencoder().cuda()\n",
     "output = model(TD, Probability)"
    ]
   },
