--- a/Autoencoder/MaskedAutoencoderWithPValue.ipynb
+++ b/Autoencoder/MaskedAutoencoderWithPValue.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "28fb32c4",
    "metadata": {
     "id": "28fb32c4"
@@ -276,7 +276,7 @@
     "            inputTD = inputTD.to(device).float()\n",
     "\n",
     "            optimizer.zero_grad()\n",
-    "            pred = model(TD,Prob)\n",
+    "            pred = model(inputTD,Prob)\n",
     "\n",
     "            loss = F.mse_loss(pred, TD)\n",
     "\n",
