--- a/Autoencoder/MaskedAutoencoderNoPValue.ipynb
+++ b/Autoencoder/MaskedAutoencoderNoPValue.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "28fb32c4",
    "metadata": {
     "id": "28fb32c4"
@@ -280,7 +280,7 @@
     "            inputTD = inputTD.to(device).float()\n",
     "\n",
     "            optimizer.zero_grad()\n",
-    "            pred = model(TD)\n",
+    "            pred = model(inputTD)\n",
     "\n",
     "            loss= F.mse_loss(pred, TD)\n",
     "\n",
